# Tarefa5_EmbarcaTech2

./: CMakeLists.txt  Tarefa5.c  Tarefa5.pio
